@@ -1,37 +1,10 @@
-import com.android.build.gradle.BaseExtension
 import com.apollographql.apollo.gradle.api.ApolloExtension
 
-apply(plugin = "com.android.library")
 apply(plugin = "com.apollographql.apollo")
-apply(plugin = "kotlin-android")
-
-extensions.findByType(BaseExtension::class.java)!!.apply {
-  compileSdkVersion(groovy.util.Eval.x(project, "x.androidConfig.compileSdkVersion").toString().toInt())
-
-  defaultConfig {
-    minSdkVersion(21) // not using androidConfig.minSdkVersion to have multidex by default
-    targetSdkVersion(groovy.util.Eval.x(project, "x.androidConfig.targetSdkVersion").toString())
-  }
-
-  compileOptions {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-  }
-
-  lintOptions {
-    textReport = true
-    textOutput("stdout")
-    ignore("InvalidPackage", "GoogleAppIndexingWarning", "AllowBackup")
-  }
-
-  packagingOptions {
-    exclude("META-INF/rxjava.properties")
-  }
-}
+apply(plugin = "org.jetbrains.kotlin.jvm")
 
 dependencies {
-  add("implementation", groovy.util.Eval.x(project, "x.dep.kotlin.coroutines.core"))
-  add("implementation", groovy.util.Eval.x(project, "x.dep.kotlin.stdLib"))
+  add("implementation", groovy.util.Eval.x(project, "x.dep.kotlin.coroutines"))
 
   add("implementation", "com.apollographql.apollo:apollo-runtime")
   add("implementation", "com.apollographql.apollo:apollo-rx2-support")
@@ -40,6 +13,7 @@ dependencies {
   add("implementation", "com.apollographql.apollo:apollo-http-cache")
   add("implementation", "com.apollographql.apollo:apollo-compiler")
 
+  add("testImplementation", kotlin("test-junit"))
   add("testImplementation", groovy.util.Eval.x(project, "x.dep.junit"))
   add("testImplementation", groovy.util.Eval.x(project, "x.dep.truth"))
   add("testImplementation", groovy.util.Eval.x(project, "x.dep.okHttp.mockWebServer"))
@@ -72,5 +46,20 @@ configure<ApolloExtension> {
   service("subscription") {
     sourceFolder.set("com/apollographql/apollo/integration/subscription")
     rootPackageName.set("com.apollographql.apollo.integration.subscription")
+  }
+  service("performance") {
+    sourceFolder.set("com/apollographql/apollo/integration/performance")
+    rootPackageName.set("com.apollographql.apollo.integration.performance")
+  }
+}
+
+tasks.withType(Test::class.java) {
+  if (System.getProperty("runPerformanceTests") == null) {
+    // Exclude performance test from CI as they take some time and their results wouldn't have a lot of meaning since the instances
+    // where tests run can change without warning.
+    exclude("**/performance/**")
+  } else {
+    // Enable some GC monitoring tools
+    jvmArgs = listOf("-verbose:gc", "-Xloggc:gc.log", "-XX:+PrintGC", "-XX:+PrintGCDetails", "-XX:+PrintGCTimeStamps")
   }
 }
